Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -35,6 +35,7 @@
        * [OperatingSystem Operating System]
        * [FileSystem File System]
        * [Socket Socket]
+       * [StandardStream Standard Stream]
        * profiles
          * [Profile Profile]
     * [FlashPlatform Flash Platform]
