Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -46,9 +46,11 @@
     * [SWC SWC]
     * [Projector Projector]
     * [Security Security]
+    * [SocketDetails Socket implementation details]
     * [Examples Examples]
        * [Examples_Socket Socket programming]
     * [Tutorials Tutorials]
       * [TutorialsVideo Video Tutorials]
     * [FAQ FAQ]
+
   
