--- a/wiki/SocketDetails.wiki
+++ b/wiki/SocketDetails.wiki
@@ -1,5 +1,5 @@
 #summary Socket implementation details.
-<g:plusone size="medium"></g:plusone>
+<g:plusone size="small"></g:plusone>
 == Introduction ==
 
 Everything you wanted to know about socket implementation details in redtamarin.
